k8s/base/websocket/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: websocket
  labels:
    app: websocket
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: websocket
