k8s/base/websocket/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: websocket
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-read-timeout: "604800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "604800"
spec:
  rules:
  - http:
      paths:
      - path: /ws(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: websocket
            port:
              number: 80
